feat: github user list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,17 @@
+buildscript {
+    repositories {
+        google()
+    }
+    dependencies {
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2")
+    }
+}
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -35,6 +44,7 @@ android {
         viewBinding = true
         dataBinding true
     }
+
 
 }
 dependencies {
@@ -83,4 +93,6 @@ dependencies {
     //Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+
+    implementation 'androidx.core:core-splashscreen:1.0.0'
 }
